--- a/wisim/src/java/net/sourceforge/wisim/controller/JPanelOptions.form
+++ b/wisim/src/java/net/sourceforge/wisim/controller/JPanelOptions.form
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.0" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+  <Properties>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[800, 600]"/>
+    </Property>
+  </Properties>
   <AuxValues>
     <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,-105,0,0,3,41"/>
   </AuxValues>
@@ -36,8 +41,8 @@
       </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_CreateCodePre" type="java.lang.String" value="DefaultMutableTreeNode root = new DefaultMutableTreeNode(&quot;Options&quot;);&#xa;DefaultMutableTreeNode elementGeneral = new DefaultMutableTreeNode(&quot;General&quot;);&#xa;elementGeneral.add(new DefaultMutableTreeNode(&quot;Layout&quot;));&#xa;root.add(elementGeneral);&#xa;&#xa;DefaultMutableTreeNode elementMySQL = new DefaultMutableTreeNode(&quot;MySQL&quot;);&#xa;elementMySQL.add(new DefaultMutableTreeNode(&quot;Einstellungen&quot;));&#xa;elementMySQL.add(new DefaultMutableTreeNode(&quot;Datenbank zurücksetzen&quot;));&#xa;root.add(elementMySQL);&#xa;&#xa;DefaultTreeModel treeModel = new DefaultTreeModel(root);&#xa;&#x9;&#x9;"/>
-        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JTree( treeModel );"/>
         <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="JPanelOptions_jTree1"/>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JTree( treeModel );"/>
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -77,8 +82,8 @@
           </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_CreateCodePre" type="java.lang.String" value="UIManager.LookAndFeelInfo plafs[] = UIManager.getInstalledLookAndFeels();&#xa;int i=0;&#xa;String[] plafname = new String[plafs.length];&#xa;while (i &lt; plafs.length) {&#xa;    plafname[i] = plafs[i].getName();&#xa;    i++;&#xa;}"/>
-            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JComboBox(plafname);"/>
             <AuxValue name="JavaCodeGenerator_CreateCodePost" type="java.lang.String" value="jComboBoxSelectSkin.setSelectedIndex(3);"/>
+            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JComboBox(plafname);"/>
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
