Implementation of the simulation-controll

--- a/wisim/src/java/net/sourceforge/wisim/controller/WiSimMainController.form
+++ b/wisim/src/java/net/sourceforge/wisim/controller/WiSimMainController.form
@@ -301,16 +301,22 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JToggleButton" name="jToggleButtonWiSimStart">
+            <Component class="javax.swing.JButton" name="jButtonSimStart">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.openide.explorer.propertysheet.editors.IconEditor">
+                  <Image iconType="3" name="/icons/run.gif"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Start"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jToggleButtonWiSimStartActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonSimStartActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jButtonSimStop">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.openide.explorer.propertysheet.editors.IconEditor">
+                  <Image iconType="3" name="/icons/stop.gif"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Stop"/>
               </Properties>
               <Events>
