Changes the validation of discount and price for better usability and german localization. Confirmation after saving in db (Feature Request #745101) Number formating (german localization) (ToDo item #754579)

--- a/wisim/src/java/net/sourceforge/wisim/controller/JPanelModifySupplier.form
+++ b/wisim/src/java/net/sourceforge/wisim/controller/JPanelModifySupplier.form
@@ -43,6 +43,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextFieldLieferantBearbeitenArtikelPreis">
+      <Properties>
+        <Property name="horizontalAlignment" type="int" value="4"/>
+      </Properties>
       <Events>
         <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jTextFieldLieferantBearbeitenArtikelPreisFocusLost"/>
       </Events>
@@ -102,6 +105,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextFieldLieferantBearbeitenMindestAbnahme">
+      <Properties>
+        <Property name="horizontalAlignment" type="int" value="4"/>
+      </Properties>
       <Events>
         <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jTextFieldLieferantBearbeitenMindestAbnahmeFocusLost"/>
       </Events>
