--- a/wisim/src/java/net/sourceforge/wisim/controller/JPanelViewSuppliers.form
+++ b/wisim/src/java/net/sourceforge/wisim/controller/JPanelViewSuppliers.form
@@ -223,9 +223,9 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="3" rowCount="0">
-                <Column editable="false" title="Artikelname" type="java.lang.Object"/>
-                <Column editable="false" title="Mindestabnahme" type="java.lang.Object"/>
-                <Column editable="false" title="Artikelpreis" type="java.lang.Object"/>
+                <Column editable="false" title="Artikelname" type="java.lang.String"/>
+                <Column editable="false" title="Mindestabnahme" type="java.lang.String"/>
+                <Column editable="false" title="Artikelpreis" type="java.lang.String"/>
               </Table>
             </Property>
           </Properties>
